--- a/css/main.css
+++ b/css/main.css
@@ -147,12 +147,14 @@ body{
 	margin: 1rem auto;
 }
 
+
 /* Inventory */
 .inventory{
 	background:var(--mainGrey);
 }
 .car-card{
 	border-radius: 5%!important;
+	cursor: pointer;
 }
 .car-img{
 	border-top-left-radius: 5%;
@@ -161,13 +163,10 @@ body{
 .car-value{
 	background: var(--mainBlue);
 	color: var(--mainWhite);
-	clip-path: polygon(15% 0,85% 0,100% 100%,0 100%);
+	border-radius: 5%;
 	transition: all 1s linear;
 }
-.car-value:hover{
-	clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
 
-}
 
 /* Question */
 .question{
@@ -239,13 +238,15 @@ body{
 }
 
 /* Featured Section */
+
+
 .featured{
-	background: var(--mainGrey);
+	background: var(--mainBlack);
 }
 .featured-items{
-	background: var(--mainWhite);
+	color: var(--mainWhite);
+	background: var(--transparentBlue);
 	border-radius: 0.5rem;
-	opacity: 0.5;
 	cursor: pointer;
 	transition: all 0.5s ease-in-out;
 }
@@ -255,15 +256,14 @@ body{
 }
 .featured-icon{
 	font-size: 1.5rem;
-	color: var(--mainBlue);
+	color: var(--mainWhite);
 	cursor: pointer;
 	transition: 0.5s all ease-in-out;
 }
-.featured-icon:hover{
-	color: var(--mainBlue);
-}
+
 .img-container{
 	background: var(--mainBlack);
+	border-radius: 0.5rem;
 	position: relative;
 	overflow: hidden;
 }
@@ -276,23 +276,7 @@ body{
 	transform: scale(1.2);
 	opacity: 0.5;
 }
-.featured-link{
-	position: absolute;
-	top:50%;
-	left:50%;
-	font-size: 3rem;
-	transform: translate(-50%,-50%);
-	color: var(--mainWhite);
-	opacity: 0;
-	transition: all 0.5s ease-in-out;
-}
-.featured-link:hover{
-	color: var(--mainBlue)
 
-}
-.img-container:hover .featured-link{
-	opacity: 1;
-}
 /* Contact Section  */
 .contact{	
 	background: url(../img/contact.jpg);
